--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=demo
 spring.datasource.url=jdbc:postgresql://localhost:5432/library_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
